--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,8 @@ body {
 .things__container {
   position: relative;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
   width: 100%;
   background-color: var(--bg-color);
@@ -154,7 +156,8 @@ body {
   display: grid;
   grid-template-columns: repeat(5,60px);
   grid-template-rows: repeat(5,60px);
-  justify-items: center;
+  justify-content: center;
+  align-content: center;
   width: 100%;
   height: 100%;
   padding: 10px;
